
----

Text:

Major releases, updates, and improvements.

Recently added terms and sources are listed in the (link: /latest text: latest additions).

Incremental changes are listed in the [code commit history](https://github.com/splorp/newton-glossary/commits/master).

### _$r

Terms: _$t
Sources: _$s

#### Summary of changes:

+ Updated [Kirby](https://getkirby.com/) to version [5.1.3](https://github.com/getkirby/kirby/releases/tag/5.1.3)

### 5.0.2

29 October 2025

Terms: 1,950
Sources: 216

#### Summary of changes:

+ Added 44 new terms
+ Added 5 new sources
+ Updated and expanded dozens of existing entries
+ Updated [ai.robots.txt](https://github.com/ai-robots-txt/ai.robots.txt) to version [1.42](https://github.com/ai-robots-txt/ai.robots.txt/releases/tag/v1.42)
+ Updated [Kirby](https://getkirby.com/) to version [5.0.4](https://github.com/getkirby/kirby/releases/tag/5.0.4)
+ Updated [Kirby Redirects](https://github.com/bnomei/kirby3-redirects) plugin to version [5.1.0](https://github.com/bnomei/kirby3-redirects/releases/tag/v5.1.0)

### 5.0.1

18 August 2025

Terms: 1,906
Sources: 211

#### Summary of changes:

+ Added 42 new terms
+ Added 5 new sources
+ Updated and expanded dozens of existing entries
+ Updated [ai.robots.txt](https://github.com/ai-robots-txt/ai.robots.txt) to version [1.39](https://github.com/ai-robots-txt/ai.robots.txt/releases/tag/v1.39)
+ Updated [Kirby](https://getkirby.com/) to version [5.0.3](https://github.com/getkirby/kirby/releases/tag/5.0.3)

### 5.0.0

21 July 2025

Terms: 1,864
Sources: 206

#### Summary of changes:

+ Added 48 new terms
+ Added 6 new sources
+ Updated and expanded dozens of existing entries
+ Updated [Kirby](https://getkirby.com/) to version [5.0.0](https://github.com/getkirby/kirby/releases/tag/5.0.0)
+ Updated [Kirby Paperback Export](https://github.com/splorp/kirby-paperback-export) plugin to version [2.0.7](https://github.com/splorp/kirby-paperback-export/releases/tag/2.0.7)