@@ -479,7 +479,7 @@
 	"license.code": "Código",
 	"license.code.help": "Recebeu o seu código de licença por email após a compra. Por favor, copie e cole aqui.",
 	"license.code.label": "Por favor, insira o código da sua licença",
-	"license.remove.text": "<p>A remoção da licença eliminará irreversivelmente o ficheiro de licença deste site. Poderá então ativar este site com uma chave de licença diferente ou voltar a registar a mesma chave de licença, desde que o domínio permaneça o mesmo.</p><p>Para alterar o domínio associado à licença, contacte a equipa do Kirby. <a href='https://getkirby.com/license'>Ler mais &rarr;</a></p>",
+	"license.remove.text": "<p>A remoção da licença deste site faz com que o ficheiro da licença seja eliminado irreversivelmente. Após a remoção, poderá então ativar este site com uma chave de licença diferente ou voltar a registar a mesma chave de licença desde que o domínio permaneça o mesmo.</p><p>Para alterar o domínio associado à licença, contacte a equipa do Kirby. <a href='https://getkirby.com/license'>Ler mais &rarr;</a></p>",
 	"license.status.active.info": "Inclui novas versões principais até {date}",
 	"license.status.active.label": "Licença válida",
 	"license.status.demo.info": "Esta é uma instalação de demonstração",
@@ -776,7 +776,7 @@
 	"user.changePassword.current": "A sua palavra-passe atual",
 	"user.changePassword.new": "Nova palavra-passe",
 	"user.changePassword.new.confirm": "Confirme a nova palavra-passe…",
-	"user.changePassword.own": "A sua própria password",
+	"user.changePassword.own": "A sua password",
 	"user.changeRole": "Alterar função",
 	"user.changeRole.select": "Selecione uma nova função",
 	"user.create": "Adicionar um novo utilizador",
